--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <nav class="navbar">
-      <h1 class="logo">[Tu Nombre]</h1>
+      <h1 class="logo">Emily Zurita</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <div class="header-content">
-      <h2>Hello, I'm [Tu Nombre]</h2>
+      <h2>Hello, I'm Emily Zurita</h2>
       <p class="tagline">Full Stack Developer | React | Node.js | Passionate About Innovative Web Solutions</p>
       <a href="#projects" class="btn">View My Work</a>
     </div>
@@ -61,7 +61,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 [Tu Nombre]. All rights reserved.</p>
+    <p>© 2025 Emily Zurita. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
