--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Portafolio</title>
+  <title>Portafolio - Emily Zurita Rivera</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
   <header>
     <nav class="navbar">
-      <h1 class="logo">Emily Zurita</h1>
+      <h1 class="logo">Emily Zurita Rivera</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+
     <div class="header-content">
-      <h2>Hello, I'm Emily Zurita</h2>
-      <p class="tagline">Full Stack Developer | React | Node.js | Passionate About Innovative Web Solutions</p>
-      <a href="#projects" class="btn">View My Work</a>
+      <img src="tu-foto.jpg" alt="[Tu Nombre]" class="profile-pic">
+      <h2>Hello, I'm Emily Zurita Rivera</h2>
+      <p class="tagline">
+        Full Stack Developer with experience in C++, HTML, JavaScript, SQL, Angular, Python, and working with Supabase. 
+        Passionate about building efficient, scalable, and innovative web applications.
+      </p>
     </div>
   </header>
 
@@ -29,27 +32,10 @@
   <section id="about" class="about-section">
     <h2>About Me</h2>
     <p>
-      I am a detail-oriented Full Stack Developer passionate about creating modern, functional, and user-friendly web applications.
-      I enjoy turning ideas into reality with clean, scalable code and innovative design.
+      I specialize in full-stack development using modern technologies. 
+      I enjoy creating clean, scalable code and working on projects that combine both functionality and good design. 
+      My technical skills include C++, HTML, JavaScript, SQL, Angular, Python, and experience with Supabase.
     </p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-card">
-        <h3>Project 1</h3>
-        <p>Description of your project.</p>
-        <a href="#" class="btn-small">View</a>
-      </div>
-      <div class="project-card">
-        <h3>Project 2</h3>
-        <p>Description of your project.</p>
-        <a href="#" class="btn-small">View</a>
-      </div>
-      <!-- Puedes agregar más proyectos aquí -->
-    </div>
   </section>
 
   <!-- Contact Section -->
@@ -61,7 +47,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Emily Zurita. All rights reserved.</p>
+    <p>© 2025 Emily Zurita Rivera. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
