--- a/index.html
+++ b/index.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio - Emily Zurita Rivera</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Portafolio - [Tu Nombre]</title>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
     <nav class="navbar">
-      <h1 class="logo">Emily Zurita Rivera</h1>
+      <h1 class="logo">[Tu Nombre]</h1>
       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">Sobre mí</a></li>
+        <li><a href="#contact">Contacto</a></li>
       </ul>
     </nav>
 
     <div class="header-content">
       <img src="tu-foto.jpg" alt="[Tu Nombre]" class="profile-pic">
-      <h2>Hello, I'm Emily Zurita Rivera</h2>
+      <h2>Hola, soy [Tu Nombre]</h2>
       <p class="tagline">
-        Full Stack Developer with experience in C++, HTML, JavaScript, SQL, Angular, Python, and working with Supabase. 
-        Passionate about building efficient, scalable, and innovative web applications.
+        Desarrollador Full Stack con experiencia en C++, HTML, JavaScript, SQL, Angular, Python y trabajando con Supabase.
       </p>
     </div>
   </header>
 
   <!-- About Section -->
   <section id="about" class="about-section">
-    <h2>About Me</h2>
+    <h2>Sobre mí</h2>
     <p>
-      I specialize in full-stack development using modern technologies. 
-      I enjoy creating clean, scalable code and working on projects that combine both functionality and good design. 
-      My technical skills include C++, HTML, JavaScript, SQL, Angular, Python, and experience with Supabase.
+      Me especializo en el desarrollo de aplicaciones web eficientes y escalables. 
+      Mi enfoque está en crear soluciones limpias y funcionales utilizando tecnologías modernas.
     </p>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
-    <h2>Contact Me</h2>
-    <p>Feel free to reach out for collaborations or job opportunities!</p>
-    <a href="mailto:youremail@example.com" class="btn">Email Me</a>
+    <h2>Contacto</h2>
+    <p>¡Estoy abierto a nuevas oportunidades y colaboraciones!</p>
+
+    <div class="contact-icons">
+      <a href="https://wa.me/593TU_NUMERO" target="_blank">
+        <i class="fab fa-whatsapp"></i> +593 TU_NUMERO
+      </a>
+      <a href="mailto:youremail@example.com">
+        <i class="fas fa-envelope"></i> youremail@example.com
+      </a>
+      <a href="https://facebook.com/TU_PERFIL" target="_blank">
+        <i class="fab fa-facebook"></i> /TU_PERFIL
+      </a>
+    </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Emily Zurita Rivera. All rights reserved.</p>
+    <p>© 2025 [Tu Nombre]. Todos los derechos reservados.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
