--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio - [Tu Nombre]</title>
+  <title>Portafolio - Emily Zurita</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header>
     <nav class="navbar">
-      <h1 class="logo">[Tu Nombre]</h1>
+      <h1 class="logo">Emily Zurita Rivera</h1>
       <ul class="nav-links">
         <li><a href="#about">Sobre mí</a></li>
         <li><a href="#contact">Contacto</a></li>
@@ -27,9 +27,9 @@
 
     <div class="header-content">
       <img src="tu-foto.jpg" alt="[Tu Nombre]" class="profile-pic">
-      <h2>Hola, soy [Tu Nombre]</h2>
+      <h2>Hola, soy Emily Zurita</h2>
       <p class="tagline">
-        Desarrollador Full Stack con experiencia en C++, HTML, JavaScript, SQL, Angular, Python y trabajando con Supabase.
+        Desarrollador Full Stack con experiencia en múltiples tecnologías y apasionado por crear aplicaciones web profesionales.
       </p>
     </div>
   </header>
@@ -37,10 +37,33 @@
   <!-- About Section -->
   <section id="about" class="about-section">
     <h2>Sobre mí</h2>
-    <p>
-      Me especializo en el desarrollo de aplicaciones web eficientes y escalables. 
-      Mi enfoque está en crear soluciones limpias y funcionales utilizando tecnologías modernas.
-    </p>
+    <p>Soy un desarrollador Full Stack con experiencia en los siguientes lenguajes y tecnologías:</p>
+    <div class="tech-logos">
+      <div class="tech">
+        <img src="logos/cpp.png" alt="C++">
+        <span>C++</span>
+      </div>
+      <div class="tech">
+        <img src="logos/js.png" alt="JavaScript">
+        <span>JavaScript</span>
+      </div>
+      <div class="tech">
+        <img src="logos/html.png" alt="HTML">
+        <span>HTML</span>
+      </div>
+      <div class="tech">
+        <img src="logos/python.png" alt="Python">
+        <span>Python</span>
+      </div>
+      <div class="tech">
+        <img src="logos/angular.png" alt="Angular">
+        <span>Angular</span>
+      </div>
+      <div class="tech">
+        <img src="logos/sql.png" alt="SQL">
+        <span>SQL</span>
+      </div>
+    </div>
   </section>
 
   <!-- Contact Section -->
@@ -50,20 +73,17 @@
 
     <div class="contact-icons">
       <a href="https://wa.me/593TU_NUMERO" target="_blank">
-        <i class="fab fa-whatsapp"></i> +593 TU_NUMERO
+        <i class="fab fa-whatsapp"></i> +593 98 744 9708
       </a>
       <a href="mailto:youremail@example.com">
-        <i class="fas fa-envelope"></i> youremail@example.com
-      </a>
-      <a href="https://facebook.com/TU_PERFIL" target="_blank">
-        <i class="fab fa-facebook"></i> /TU_PERFIL
+        <i class="fas fa-envelope"></i> emilyzurita17@gmail.com
       </a>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 [Tu Nombre]. Todos los derechos reservados.</p>
+    <p>© 2025 Emily Zurita Rivera. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
