--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="header-content">
-      <img src="tu-foto.jpg" alt="[Tu Nombre]" class="profile-pic">
+      <img src="Gemini_Generated_Image_gp1g2qgp1g2qgp1g.png" alt="emily" class="profile-pic">
       <h2>Hola, soy Emily Zurita</h2>
       <p class="tagline">
         Desarrollador Full Stack con experiencia en múltiples tecnologías y apasionado por crear aplicaciones web profesionales.
@@ -40,27 +40,27 @@
     <p>Soy un desarrollador Full Stack con experiencia en los siguientes lenguajes y tecnologías:</p>
     <div class="tech-logos">
       <div class="tech">
-        <img src="logos/cpp.png" alt="C++">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png" alt="C++">
         <span>C++</span>
       </div>
       <div class="tech">
-        <img src="logos/js.png" alt="JavaScript">
+        <img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="JavaScript">
         <span>JavaScript</span>
       </div>
       <div class="tech">
-        <img src="logos/html.png" alt="HTML">
+        <img src="https://img.favpng.com/20/7/5/html-logo-canvas-element-javascript-png-favpng-9Zr8VThP4aQLbAyUYddQzU2rA.jpg" alt="HTML">
         <span>HTML</span>
       </div>
       <div class="tech">
-        <img src="logos/python.png" alt="Python">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6ZMz1hjBcRWGS-Jg8kcHK2eJI_p4aRp_NZw&s" alt="Python">
         <span>Python</span>
       </div>
       <div class="tech">
-        <img src="logos/angular.png" alt="Angular">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="Angular">
         <span>Angular</span>
       </div>
       <div class="tech">
-        <img src="logos/sql.png" alt="SQL">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTo6AWHVzRx6X3ICQce-4cnKoyojzylW-fTjg&s" alt="SQL">
         <span>SQL</span>
       </div>
     </div>
