--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <span>JavaScript</span>
       </div>
       <div class="tech">
-        <img src="https://img.favpng.com/20/7/5/html-logo-canvas-element-javascript-png-favpng-9Zr8VThP4aQLbAyUYddQzU2rA.jpg" alt="HTML">
+        <img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png" alt="HTML">
         <span>HTML</span>
       </div>
       <div class="tech">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6ZMz1hjBcRWGS-Jg8kcHK2eJI_p4aRp_NZw&s" alt="Python">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" alt="Python">
         <span>Python</span>
       </div>
       <div class="tech">
@@ -60,7 +60,7 @@
         <span>Angular</span>
       </div>
       <div class="tech">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTo6AWHVzRx6X3ICQce-4cnKoyojzylW-fTjg&s" alt="SQL">
+        <img src="https://cdn-icons-png.flaticon.com/512/603/603201.png" alt="SQL">
         <span>SQL</span>
       </div>
     </div>
