--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
 
     <div class="contact-icons">
       <a href="https://wa.me/593TU_NUMERO" target="_blank">
-        <i class="fab fa-whatsapp"></i> +593 98 744 9708
+        <i class="fab fa-whatsapp"></i> 
+        +593 98 744 9708
       </a>
       <a href="mailto:youremail@example.com">
-        <i class="fas fa-envelope"></i> emilyzurita17@gmail.com
+        <i class="fas fa-envelope"></i> 
+        emilyzurita17@gmail.com
       </a>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Emily Zurita Rivera. Todos los derechos reservados.</p>
+    <p>© 2025 Emily Zurita Rivera.</p>
+    <p>Todos los derechos reservados. </p>
   </footer>
 </body>
 </html>
