--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="Gemini_Generated_Image_gp1g2qgp1g2qgp1g.png" alt="emily" class="profile-pic">
       <h2>Hola, soy Emily Zurita</h2>
       <p class="tagline">
-        Desarrollador Full Stack con experiencia en múltiples tecnologías y apasionado por crear aplicaciones web profesionales.
+        Desarrollo de Software Junior.
       </p>
     </div>
   </header>
@@ -73,13 +73,13 @@
     <p>¡Estoy abierto a nuevas oportunidades y colaboraciones!</p>
 
     <div class="contact-icons">
-      <a href="https://wa.me/593TU_NUMERO" target="_blank">
-        <i class="fab fa-whatsapp"></i> 
-        +593 98 744 9708
+      <a href="https://wa.me/593987449708" target="_blank" class="contact-item">
+        <i class="fab fa-whatsapp"></i>
+        <span>+593 98 744 9708</span>
       </a>
-      <a href="mailto:youremail@example.com">
-        <i class="fas fa-envelope"></i> 
-        emilyzurita17@gmail.com
+      <a href="mailto:emilyzurita17@gmail.com" class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <span>emilyzurita17@gmail.com</span>
       </a>
     </div>
   </section>
