--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <span>Python</span>
       </div>
       <div class="tech">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/2560px-PHP-logo.svg.png" alt="PHP">
+        <span>PHP</span>
+      </div>
+      <div class="tech">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="Angular">
         <span>Angular</span>
       </div>
