--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <span>PHP</span>
       </div>
       <div class="tech">
+        <img src="https://cdn.worldvectorlogo.com/logos/typescript.svg" alt="ts">
+        <span>TypeScript</span>
+      </div>
+      <div class="tech">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="Angular">
         <span>Angular</span>
       </div>
